<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- GENERAL -->
    <string name="app_name">Max\'s Toolbox</string>

    <!-- General User Interface -->
    <string name="loading">Loading…</string>
    <string name="pleaseWait">Please Wait…</string>
    <string name="deleting_files">Deleting files, please wait…</string>
    <string name="service_not_available">Service currently unavailable…</string>
    <string name="error">Error…</string>
    <string name="retry">Try again</string>
    <string name="done">Done.</string>
    <string name="proceed">Proceed</string>
    <string name="not_recommended">Not recommended</string>
    <string name="reboot_now">Reboot NOW</string>
    <string name="warning">Warning!</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="nav_drawer_items">
        <item>Device information</item>
        <item>Cleaner</item>
        <item>Internal storage backup</item>
        <item>Post ROM flash tasks</item>
        <item>Settings</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_about</item>
        <item>@drawable/ic_action_discard</item>
        <item>@drawable/list_item_bg_normal</item>
        <item>@drawable/list_item_bg_normal</item>
        <item>@drawable/ic_action_settings</item>
    </array>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- INFO FRAGMENT -->
    <string name="device_check">Getting device name…</string>
    <string name="root_check">Checking for root access…</string>
    <string name="root_available">Root access available!</string>
    <string name="root_unavailable">Root access unavailable!</string>
    <string name="storage_total">Internal storage:</string>
    <string name="storage_used">Used:</string>
    <string name="storage_free">Free:</string>

    <!-- CLEAN FRAGMENT -->
    <string name="dalvik_warning">This will wipe the dalvik cache of the phone. After doing this, your device will get extremely unstable and it highly recommended to reboot afterwards.
        Do you want to proceed?</string>
    <!-- Manifest Download and update -->
    <string name="manifest_too_old_nn">The local copy of manifest is older than %s hours and should be updated on next network connection.</string>
    <string name="manifest_updated">The manifest was automatically updated because it was older than %s hours.</string>
    <string name="downloadingManifest">Downloading Manifest…</string>
    <string name="no_network_manifest">There\'s neither a network connection nor a cached version of the manifest.</string>
    <string name="manifest_local_copy">Using locally cached copy of manifest</string>
    <string name="auto_update_disabled">Auto-Updating of manifest is disabled.</string>
    <!-- Checkboxes -->
    <string name="cb_clear_ad_cache">Clear ad-cache</string>
    <string name="cb_clear_thumbs">Clear thumbs</string>
    <string name="cb_clear_logs">Clear logs</string>
    <string name="cb_clear_temporary">Clear temporary (*.tmp) files</string>
    <string name="cb_format_cache">Format /cache partition (Root required)</string>
    <string name="cb_clear_dalvik">Clear dalvik-cache (Root required)</string>
    <!-- Buttons -->
    <string name="button_clear_selected">Clear selected</string>
    <!-- Cleaner -->
    <string name="no_manifest">The manifest isn\'t found or doesn\'t exist.</string>
    <string name="no_root">It seems your device isn\'t rooted, although root would be required for this action.</string>
    <string name="dalvik_post_reboot">It\'s recommended to reboot now.</string>
    <string name="cancel_nr">Cancel (Not recommended)</string>

    <!-- BACKUP FRAGMENT -->
    <string name="backup_description">This will backup the content of your internal storage as archive.
        NOTE: Folders known for their big size will be excluded! (e.g. custom recovery folders, MultiRom folder, backup folders)</string>
    <string name="toast_internal_not_set">Internal Storage Location not set!</string>
    <string name="toast_external_not_set">External Storage Location not set!</string>
    <!-- Storage setup -->
    <string name="title_activity_storage_setup">Storage locations setup</string>
    <string name="storage_setup_desc">Here you have to specify the location of your internal and external storage,
        since it\'s not manageable to find out their locations, because of the high fragmentation and there\'s no definite API for it (blame Google!)</string>
    <string name="internal_storage_location"><b>Internal storage location</b></string>
    <string name="external_storage_location"><b>External storage location</b></string>
    <string name="internal_storage_setup_desc">This is the storage that will be backed up, e.g. <i>/storage/emulated/0</i> or <i>/storage/sdcard0</i></string>
    <string name="external_storage_setup_desc">This is the trickier part. You will have to specify your SD-Card location,
        or an external  mounted USB stick (e.g. <i>/storage/sdcard1</i>, or <i>/storage/extSdCard</i>). If you don\'t have any of these, just choose internal storage again,
        it\'ll backup all the other content on the storage in a sub-folder. Note that you\'ll then need pretty much free storage.</string>

    <!-- MENUS -->
    <string name="menu_dev_section">Developer section</string>
    <string name="dev_text">This activity is for development. It contains activities that are not ready,
        SOME BUTTONS CAN DELETE FILES YOU NEED! It\'s not my fault if you do something wrong here. Do you REALLY want to continue?</string>

    <!-- SETTINGS -->
    <string name="title_activity_settings">Settings</string>
    <!-- Updating -->
    <string name="force_update">Force update of manifest</string>
    <string name="force_update_summary">You need an active internet connection for doing this.</string>
    <string name="no_network">There\'s no network connection…</string>
    <string name="update_interval">Update interval</string>
    <string name="update_interval_summary">Timespan in which the manifest gets automatically updated. If it is 0, it will never be updated automatically.</string>
    <!-- Cleaner -->
    <string name="pref_header_cleaner">Cleaner</string>
    <string name="pref_custom_deletion_folders">Custom folders to delete (Not implemented)</string>
    <!--TODO-->
    <!-- Backup -->
    <string name="pref_header_backup">Internal storage backup</string>
    <string name="pref_backup_storage_setup">Setup backup storage</string>
    <!-- About -->
    <string name="pref_header_about">About</string>
    <string name="about_pref">About</string>
    <string name="about_text">CleanIt is an app developed by Maxr1998. It clears files and caches  that are spamming your SD-Card.
        Please help making the database bigger by sending file paths of offline ads, thumbs and more.\n\n©2014 by Maxr1998</string>
    <string name="unlock_developer_section_pref">Unlock developer section</string>
    <string name="show_dev_already">You have already unlocked developer section…</string>
    <string name="show_dev_on">You successfully unlocked developer section!</string>

    <plurals name="show_dev_countdown">
        <item quantity="one">You are now <xliff:g id="step_count">%1$d</xliff:g> step away from being a developer.</item>
        <item quantity="other">You are now <xliff:g id="step_count">%1$d</xliff:g> steps away from being a developer.</item>
    </plurals>


    <!-- =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= -->
    <!-- DO NOT TRANSLATE // STATIC -->
    <string name="manifest_link">https://dl.dropboxusercontent.com/s/s0pskncqf9cf4ib/manifest.txt</string>
    <string name="manifest_filename">manifest.txt</string>

</resources>