<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.Maxr1998.Toolbox.BackupStorageSetupActivity">

    <TextView
        android:id="@+id/storage_setup_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:text="@string/storage_setup_desc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/internal_storage_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/storage_setup_desc"
        android:text="@string/internal_storage_location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/internal_storage_setup_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/internal_storage_location"
        android:text="@string/internal_storage_setup_desc"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/internal_storage_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/internal_storage_setup_desc"
        android:layout_marginBottom="8dp"
        android:focusable="false"
        android:hint="@string/internal_storage_location"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/external_storage_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/internal_storage_loc"
        android:text="@string/external_storage_location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/external_storage_setup_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/external_storage_location"
        android:text="@string/external_storage_setup_desc"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/external_storage_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/external_storage_setup_desc"
        android:focusable="false"
        android:hint="@string/external_storage_location"
        android:inputType="textUri" />


</RelativeLayout>
